services/payment-api/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: payment-api

spec:
  replicas: 1

  selector:
    matchLabels:
      app: payment-api

  template:
    metadata:
      labels:
        app: payment-api

    spec:
      containers:
      - name: payment-api
        image: stackbridge/payment-api:latest

        ports:
        - containerPort: 8000
