services/payment-api/k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: payment-api

spec:
  selector:
    app: payment-api

  ports:
  - port: 80
    targetPort: 8000

  type: ClusterIP
